--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.80MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇮🇹 意大利-1.35MB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-278.9KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.84MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇸🇬 新加坡-1.21MB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
+  - {name: 🇬🇧 英国-3.97MB/s(Youtube:不良林), server: 78.129.253.9, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇸🇬 新加坡-3.62MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.80MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-278.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
