--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.84MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇸🇬 新加坡-1.21MB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
-  - {name: 🇬🇧 英国-3.97MB/s(Youtube:不良林), server: 78.129.253.9, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇸🇬 新加坡-3.62MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-2.79MB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-206.7KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-1.29MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-3.18MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2, server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-2.86MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.84MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
