--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-2.79MB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-206.7KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇬🇧 英国-1.29MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-3.18MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇬🇧 英国-3.97MB/s(Youtube:不良林), server: 78.129.253.9, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇫🇷 法国-1.91MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-4.66MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
