--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇬🇧 英国-3.97MB/s(Youtube:不良林), server: 78.129.253.9, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇫🇷 法国-1.91MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-4.66MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.73MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.16MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-256.6KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
+  - {name: 未知国家-341.5KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇦 加拿大-2.86MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2, server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-2.86MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2, server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 未知国家-341.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 未知国家-341.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 未知国家-341.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 未知国家-341.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 未知国家-341.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 未知国家-341.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林) 2
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 未知国家-341.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
