--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-2.90MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇮🇳 印度-343.1KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.64MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.11MB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇸🇬 新加坡-9.06MB/s(Youtube:不良林), server: 139.162.4.68, port: 80, type: vmess, uuid: a8941bb8-19f8-43f7-ab52-1001d101a538, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 139.162.4.68}}
+  - {name: 🇨🇦 加拿大-1.81MB/s(Youtube:不良林), server: 134.195.198.95, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-456.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-3.02MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇨🇦 加拿大-3.03MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇮🇳 印度-343.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇮🇳 印度-343.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇮🇳 印度-343.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇮🇳 印度-343.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇮🇳 印度-343.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇮🇳 印度-343.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.90MB/s(Youtube:不良林)
-      - 🇮🇳 印度-343.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.06MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-456.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
